@@ -1,6 +1,6 @@
 simplifies camping deployment
 
 require 'camper'
-Camping.makes :Blog
+Camping.goes :Blog
 #..your code
 Camping.start
