@@ -1,1 +1,2 @@
 8/20/2008 initial release
+9/1/2008  dropped Camping.makes in favor of Camping.goes method
